; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_kill_process_async.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_kill_process_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kMemorystatusKilledVMPageShortage = common dso_local global i64 0, align 8
@kMemorystatusKilledVMCompressorThrashing = common dso_local global i64 0, align 8
@kMemorystatusKilledVMCompressorSpaceShortage = common dso_local global i64 0, align 8
@kMemorystatusKilledFCThrashing = common dso_local global i64 0, align 8
@kMemorystatusKilledZoneMapExhaustion = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@kill_under_pressure_cause = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @memorystatus_kill_process_async to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memorystatus_kill_process_async(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %28, label %8

8:                                                ; preds = %2
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* @kMemorystatusKilledVMPageShortage, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @kMemorystatusKilledVMCompressorThrashing, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %30

16:                                               ; preds = %12
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* @kMemorystatusKilledVMCompressorSpaceShortage, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %30

20:                                               ; preds = %16
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @kMemorystatusKilledFCThrashing, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %20
  %25 = load i64, i64* %5, align 8
  %26 = load i64, i64* @kMemorystatusKilledZoneMapExhaustion, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %24, %2
  %29 = load i32, i32* @FALSE, align 4
  store i32 %29, i32* %3, align 4
  br label %34

30:                                               ; preds = %24, %20, %16, %12, %8
  %31 = load i64, i64* %5, align 8
  store i64 %31, i64* @kill_under_pressure_cause, align 8
  %32 = call i32 (...) @memorystatus_thread_wake()
  %33 = load i32, i32* @TRUE, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %30, %28
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i32 @memorystatus_thread_wake(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
